--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,5 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/git,java,maven,eclipse,windows
+.$JogoDaVelha.drawio.bkp
+.$JogoDaVelha.drawio.dtmp
